<resources>
    <string name="app_name">UNIDEV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UNIDEV Fitness</string>
    <string name="nav_header_subtitle">Universal Fitness Development</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_trainings">Training</string>
    <string name="menu_diet">Diet</string>
    <string name="menu_adv">Advices</string>
    <string name="menu_motivation">Motivation</string>
    <string name="menu_options">Options</string>
    <string name="menu_favorites">Favorites</string>

    <string name="menu_home_ru">Главная</string>
    <string name="menu_gallery_ru">Прогресс</string>
    <string name="menu_slideshow_ru">Календарь</string>
    <string name="menu_blog_ru">Блог</string>
    <string name="menu_trainings_ru">Тренировки</string>
    <string name="menu_diet_ru">Питание</string>
    <string name="menu_adv_ru">Советы</string>
    <string name="menu_motivation_ru">Мотивация</string>
    <string name="menu_options_ru">Параметры</string>
    <string name="menu_favorites_ru">Избранное</string>
    <string name="format_name">%1$s, %2$d</string>
    <string name="format_city">%1$s, %2$s</string>
    <string name="format_subscription">Подписка: %1$s</string>
    <string name="format_guide">Гайд: %1$s</string>
    <string name="format_weight">%1$d кг</string>
    <string name="format_height">%1$d см</string>
    <string name="format_index">%1$.2f</string>
    <string name="more_text">Подробнее</string>
    <string name="parameters_text">Параметры</string>
    <string name="weight_text">Вес:</string>
    <string name="height_text">Рост:</string>
    <string name="index_text">Индекс:</string>
    <string name="new_text">Новости</string>
    <string name="save_text">Сохранить</string>
    <string name="sm_text">см</string>
    <string name="kg_text">кг</string>


</resources>