<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="homeViewModel"
                type="com.unidev.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/home_bg">

        <LinearLayout
                android:id="@+id/fragment_home__ll_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                android:background="@color/home_profile_bg">

            <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/fragment_home__iv_profile_image"
                    android:layout_width="@dimen/profile_image_size"
                    android:layout_height="@dimen/profile_image_size"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/home_profile_stroke"
                    app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:padding="2dp"/>

            <TextView
                    android:id="@+id/fragment_home__tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{@string/format_name(homeViewModel.name, homeViewModel.age)}"
                    tools:text="Иван Иванов, 20"
                    android:textColor="@color/secondary_text"
                    android:layout_marginTop="10dp" />

            <TextView
                    android:id="@+id/fragment_home__tv_profile_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{@string/format_city(homeViewModel.city, homeViewModel.country)}"
                    tools:text="Москва, Россия"
                    android:textColor="@color/secondary_text"/>

            <TextView
                    android:id="@+id/fragment_home__tv_profile_subscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{@string/format_subscription(homeViewModel.subscription)}"
                    tools:text="Подписка: Silver"
                    android:textColor="@color/secondary_text"
                    android:layout_marginTop="8dp" />

            <TextView
                    android:id="@+id/fragment_home__tv_profile_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{@string/format_guide(homeViewModel.guide)}"
                    tools:text="Гайд: Похудение"
                    android:textColor="@color/secondary_text"/>

        </LinearLayout>

        <View
                android:id="@+id/fragment_home__divider_profile"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__ll_profile"/>

        <TextView
                android:id="@+id/fragment_home__tv_parameters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters_text"
                android:textSize="18sp"
                android:textColor="@color/primary_color"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__divider_profile"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp" />

        <ImageButton
                android:id="@+id/fragment_home__ib_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/fragment_home__tv_parameters"
                app:layout_constraintBottom_toBottomOf="@id/fragment_home__tv_parameters"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_edit"
                android:background="@null"/>

        <TextView
                android:id="@+id/fragment_home__tv_weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_text"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_parameters"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_parameters"
                android:layout_marginTop="12dp"
                android:textColor="@color/secondary_text"/>

        <TextView
                android:id="@+id/fragment_home__tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/format_weight(homeViewModel.weight)}"
                tools:text="70 кг"
                android:textColor="@color/secondary_text"
                app:layout_constraintBottom_toBottomOf="@id/fragment_home__tv_weight_text"
                app:layout_constraintStart_toEndOf="@id/fragment_home__tv_weight_text"
                android:layout_marginStart="12dp" />

        <TextView
                android:id="@+id/fragment_home__tv_height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_text"
                android:textColor="@color/secondary_text"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_weight_text"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_parameters" />

        <TextView
                android:id="@+id/fragment_home__tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/format_height(homeViewModel.height)}"
                tools:text="177 см"
                android:textColor="@color/secondary_text"
                app:layout_constraintBottom_toBottomOf="@id/fragment_home__tv_height_text"
                app:layout_constraintStart_toEndOf="@id/fragment_home__tv_height_text"
                android:layout_marginStart="12dp" />

        <TextView
                android:id="@+id/fragment_home__tv_index_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_text"
                android:textColor="@color/secondary_text"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_height_text"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_parameters" />

        <TextView
                android:id="@+id/fragment_home__tv_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/format_index(homeViewModel.index)}"
                tools:text="0.00"
                android:textColor="@color/secondary_text"
                app:layout_constraintBottom_toBottomOf="@id/fragment_home__tv_index_text"
                app:layout_constraintStart_toEndOf="@id/fragment_home__tv_index_text"
                android:layout_marginStart="12dp" />

        <TextView
                android:id="@+id/fragment_home__tv_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_text"
                android:textSize="18sp"
                android:textColor="@color/primary_color"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_index_text"
                app:layout_constraintStart_toStartOf="@id/fragment_home__tv_parameters"
                android:layout_marginTop="12dp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home__rv_news"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:clipToPadding="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_home__tv_news"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>